; ModuleID = '/home/carl/AnghaBench/git/extr_http-backend.c_hdr_date.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-backend.c_hdr_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@RFC2822 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i8*, i32)* @hdr_date to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hdr_date(%struct.strbuf* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @RFC2822, align 4
  %10 = call i32 @DATE_MODE(i32 %9)
  %11 = call i8* @show_date(i32 %8, i32 0, i32 %10)
  store i8* %11, i8** %7, align 8
  %12 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @hdr_str(%struct.strbuf* %12, i8* %13, i8* %14)
  ret void
}

declare dso_local i8* @show_date(i32, i32, i32) #1

declare dso_local i32 @DATE_MODE(i32) #1

declare dso_local i32 @hdr_str(%struct.strbuf*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
